attempt to fix 100vh issue on mobile take 3

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
   position: relative;
 }
 
+#root {
+  overflow: hidden;
+}
+
 h1,
 p {
   text-align: center;
